# ProiectOOP

./: CMakeLists.txt  Catalog.cpp  Catalog.h  Elicopter.cpp  Elicopter.h  Jucarie.cpp  Jucarie.h  Lego.cpp  Lego.h  Papusa.h  README.md  Xshot.cpp  Xshot.h  coverage.Catalog.cpp.html  coverage.Catalog.h.html  coverage.Elicopter.cpp.html  coverage.Elicopter.h.html  coverage.Jucarie.cpp.html  coverage.Jucarie.h.html  coverage.Lego.cpp.html  coverage.Lego.h.html  coverage.Xshot.cpp.html  coverage.Xshot.h.html  coverage.html  coverage.main.cpp.html  main.cpp  rlutil.h
